[package]
name = "conf"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
envy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
mockito = "1.7.0"
serde_json = "1.0.140"
ctor = "0.4.2"
